refine animated circle placement and correct overlap

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,3 @@
-
-
-
 html {
   background-color:  black;
 }
@@ -33,12 +30,12 @@ html {
   width:  40%;
   height:  500px;
   padding-top:  56px;
-  z-index: 10;
+  z-index: 2;
 }
 
 .col--60 {
   width:  60%;
-  z-index: 7;
+  z-index: 2;
 }
 
 .section--black_h3 {
@@ -86,7 +83,6 @@ h2 {
 
 .hero__lottie {
   transform:  translateY(4px);
-  z-index:  -1;
 }
 
 .container--inner--video {
@@ -95,14 +91,13 @@ h2 {
   margin-left:  auto;
   margin-right:  auto;
   padding:  0 50px 100px 50px;
-
 }
 
 .video {
   width:  70%;
   margin-left:  auto;
   margin-right:  auto;
-    position: relative;
+  position: relative;
 }
 
 .intro-p {
@@ -137,18 +132,22 @@ h2 {
   width:  100%;
 }
 
-.col--60,
 .section--four {
   position:  static;
-  z-index:  2;
+}
+
+.section--three {
+  z-index: 4;
+  position: relative;
+}
+
+.inner--three {
+  position: relative;
+  overflow: hidden;
 }
 
 .bold {
   font-weight:  600;
-}
-
-.z-index-6 {
-  z-index:  6;
 }
 
 .feature-text-p {
@@ -198,6 +197,7 @@ h2 {
   height:  430px;
   border-radius:  50%;
   position:  absolute;
+  opacity: .35;
 }
 
 .circle--one {
@@ -224,7 +224,6 @@ h2 {
   transform:  translate(215%, -70%);
 }
 
-
 .circle--five {
   background-color:  #d0e2ff;
   transform:  translate(53%, -70%);
@@ -237,15 +236,13 @@ h2 {
 
 .circle--seven {
   background-color:  #d0e2ff;
-  transform:  translate(230%, 70%);
+  transform:  translate(10%, 70%);
 }
 .overflow-hidden {
   overflow: hidden;
 }
 .section--seven {
-  /* position:  relative; */
   overflow:  visible;
-  /* z-index:  5; */
 }
 
 .section--eight {
@@ -253,7 +250,7 @@ h2 {
 }
 
 .outer--loop {
-    background-color:  #121619;
+  background-color:  #121619;
 }
 
 .inner--loop {
